<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ge.studio404.geovoters.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#3aa4dd">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@mipmap/myicon"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/geovotersiconattribute" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/projecttitle"
            android:id="@+id/ProjectTitle"
            android:layout_marginTop="20dp"
            android:textColor="#9dd2ef"
            android:textSize="28sp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/sistemashi_shesvla"
            android:id="@+id/gototabactivity"
            android:background="#3290c3"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="signinsystem"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcomeText"
            android:id="@+id/WelcomeText"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="false"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/numbers"
            android:id="@+id/peopleCount"
            android:textColor="#E3B759"
            android:textSize="35sp"
            android:gravity="center_horizontal"
            android:layout_alignBottom="@+id/gototabactivity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@mipmap/usersicon"
            android:layout_above="@+id/peopleCount"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:soundEffectsEnabled="true"
            android:contentDescription="@string/usersimage" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>